# nrf51_vesc

./: .gitignore  CMakeLists.txt  build.sh  gitVersion.sh
